--- a/4-forms/begin/css/forms.css
+++ b/4-forms/begin/css/forms.css
@@ -5,11 +5,24 @@ html {
   box-sizing: inherit;
 }
 body {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Roboto', sans-serif;
+
 	margin: 0;
 	padding: 0;
 	background-image: url(../img/galaxy.jpg);
 }
+
+h3 {
+	font-family: 'Architects Daughter', cursive;
+}
+legend {
+	font-family: 'Architects Daughter', cursive;
+}
+
+section p {
+	margin-bottom: 0.5rem;
+}
+
 .wrapper {
 	width: 80%;
 	margin: 0 auto;
