--- a/5-github/begin/css/calculator.css
+++ b/5-github/begin/css/calculator.css
@@ -10,4 +10,59 @@ body {
 }
 .wrapper {
     width: 400px;
+    background-color: black;
+    color: white;
+}
+
+.calc-button-row {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    margin-bottom: 0.5%;
+}
+.screen {
+    text-align: right;
+    font-family: 'Courier New', Courier, monospace;
+    padding: 20px 5px;
+    font-size: 40px;
+}
+
+.calc-button {
+    color: black;
+    background-color: #d8d9db;
+    border: none;
+    font-size: 40px;
+    height: 100px;
+    flex-basis: 24.5%;
+}
+
+.calc-button:hover {
+    background-color: #ebebeb;
+}
+
+.calc-button:hover {
+    background-color: #bbbcbe;
+}
+
+.double {
+    flex-basis: 49.7%
+}
+
+.triple {
+    flex-basis: 74.8%;
+}
+
+.calc-button:last-child {
+    background-color: #df974c;
+    color: white;
+}
+
+.calc-button:last-child:hover {
+    background-color: #dfb07e;
+    color: white;
+}
+
+.calc-button:last-child:active {
+    background-color: #dd8d37;
+    color: white;
 }
